[Proton tooltips] tab tooltip is not attached to the tab when overflowing tab strip is being scrolled
Categories
(Firefox :: Tabbed Browser, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox86 | --- | unaffected |
| firefox87 | --- | unaffected |
| firefox88 | --- | disabled |
| firefox89 | --- | wontfix |
| firefox90 | --- | wontfix |
| firefox91 | --- | verified |
People
(Reporter: jastekken, Assigned: enndeakin)
References
(Regression)
Details
(Keywords: helpwanted, regression, Whiteboard: [proton-tooltips][priority:2c] )
Attachments
(2 files)
STR:
- Open bunch of tabs, so many that tab strip overflows by a fair amount.
- Move cursor over the tab strip and scroll "almost immediately"
Actual results:
The tooltip may end up being shown in wrong location. On narrow windows and somewhat fast scrolling the tooltip can even be way outside of the window.
It looks as if the tooltip is being drawn at a coordinate where the initial hovered tab would have been translated to by the scroll. It also seems to be rather picky about the exact timing of the scroll event, but I can reproduce it quite easily nonetheless. More tabs feels to make it easier to reproduce this, but I can't be sure of this.
In addition, this might not actually be proton specific but pre-proton the tooltip was shown so fast that there wasn't ever enough time to initiate scroll between hovering of the tab and showing the tooltip.
Whatever the cause may be, scrolling should probably cancel the tooltip from being shown, or if anything the shown tooltip should be whatever tab the cursor ended up on after the scroll.
| Reporter | ||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Comment 1•5 years ago
|
||
Set release status flags based on info from the regressing bug 1665390
Comment 3•5 years ago
|
||
There is an event listener for DOMMouseScroll that should be removing the tooltip. I'm not sure why it's not working.
Updated•5 years ago
|
Updated•5 years ago
|
Comment 4•5 years ago
|
||
@Neil, do you know why the DOMMouseScroll event listener isn't getting used here?
Updated•5 years ago
|
Comment 5•5 years ago
|
||
RT, as the triage owner I set the priority based on the assumption that we don't want to ship this regression. If you disagree, please explain.
Updated•5 years ago
|
Updated•5 years ago
|
| Reporter | ||
Comment 6•5 years ago
|
||
(In reply to Jared Wein [:jaws] (please needinfo? me) from comment #3)
There is an event listener for DOMMouseScroll that should be removing the tooltip. I'm not sure why it's not working.
That listener only checks "DOMMouseScroll" but the function that handles the scrolling seems to be triggered by "wheel" event. That same function later calls event.stopPropagation() and event.preventDefault() so I'm thinking the DOMMouseScroll event just isn't triggered.
And indeed, if I remove the on_wheel event listener by using browser toolbox, then the tooltip is removed immediately when using scroll-wheel - even though the scrollbox isn't actually scrolled anymore.
Comment 7•5 years ago
|
||
Looking back at it now this bug seems to require enabling the proton tooltips, which have been de-scoped.
Dao - can you please confirm we can lower the priority here?
Comment 8•5 years ago
|
||
Yeah, this is only an issue with proton tooltips enabled.
Updated•5 years ago
|
| Assignee | ||
Comment 9•5 years ago
|
||
Updated•5 years ago
|
| Assignee | ||
Comment 10•5 years ago
|
||
The patch here is based on the test that was added in bug 1696214.
Comment 11•5 years ago
|
||
Comment 12•5 years ago
|
||
| bugherder | ||
Comment 13•5 years ago
|
||
Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.
Updated•5 years ago
|
Comment 14•5 years ago
|
||
The patch landed in nightly and beta is affected.
:enndeakin, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 15•5 years ago
|
||
This only applies when the proton tooltip pref is enabled.
Comment 16•5 years ago
|
||
Hello! I have managed to reproduce the issue on Ubuntu 20 and Windows using firefox 88.0a1 (2021-02-26) and enabling the tooltip preference. I can confirm that the issue is fixed with firefox nightly 91.0a1(2021-06-08) on all OS's.
I will update the flags accordingly.
Thank you!
Description
•