Bug 1695527, listen to the wheel event instead of DOMMouseScroll to close tooltips when scrolling, r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D116137